--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                             <br/>The prompt should be as following:
                             <br/>
 
-                                <pre><code>A chat between a curious user and an artificial intelligence assistant. The assistant gives helpful, detailed, and polite answers to the user's questions. USER: Hi ASSISTANT: Hello.&lt;/s&gt;<br/>USER: Who are you? ASSISTANT: I am WizardLM.&lt;/s&gt;......
+                                <pre><code>A chat between a curious user and an artificial intelligence assistant. The assistant gives helpful, detailed, and polite answers to the user's questions. USER: Hi ASSISTANT: Hello.&lt;/s&gt;USER: Who are you? ASSISTANT: I am WizardLM.&lt;/s&gt;......
                                 </code></pre>
 
                              <b>Inference WizardLM-2 Demo Script</b>
