--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </section>
 
 
-        	    <section class="hero">
+<!--         	    <section class="hero">
         <div class="hero-body">
             <div class="container is-max-desktop has-text-centered">
 <!--                <h2 class="title is-3">WizardLM 2 capacities</h2>-->
@@ -156,7 +156,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
         <section class="section hero is-light">
         <div class="container is-max-desktop">
