--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
                         <div class="column has-text-centered">
                             <div class="publication-links">
-                                <span class="link-block">
+<!--                                 <span class="link-block">
                                     <a href="https://huggingface.co/collections/microsoft/wizardlm-2-661d403f71e6c8257dbd598a" target="_blank"
                                         class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
@@ -89,7 +89,7 @@
                                         </span>
                                         <span>Code</span>
                                     </a>
-                                </span>
+                                </span> -->
 
                                 <!-- ArXiv abstract Link -->
                                 <span class="link-block">
