--- a/index.html
+++ b/index.html
@@ -289,8 +289,7 @@
                     <h2 class="title is-4">Usage</h2>
                     <div class="content has-text-justified">
                         <p>
-                            The model weights of WizardLM-2 8x22B and WizardLM-2 7B are shared on <a href="https://huggingface.co/collections/microsoft/wizardlm-2-661d403f71e6c8257dbd598a" style="color:#1976D2;" target=“_blank”>Huggingface</a>,
-                            and WizardLM-2 70B and the demo of all the models will be available in the coming days. Please use the same system prompts strictly with us to guarantee the generation quality.
+                            Please use the same system prompts strictly with us to guarantee the generation quality.
                             <br/><br/>
                             ❗<b>Note for model system prompts usage:</b>
                             <br/>
